[gd_scene load_steps=22 format=2]

[ext_resource path="res://texture/enemy_sprites/Attack1 (2).png" type="Texture" id=1]
[ext_resource path="res://texture/enemy_sprites/Death2 (2).png" type="Texture" id=2]
[ext_resource path="res://texture/enemy_sprites/Death3 (2).png" type="Texture" id=3]
[ext_resource path="res://texture/enemy_sprites/Death4 (2).png" type="Texture" id=4]
[ext_resource path="res://texture/enemy_sprites/Attack2 (2).png" type="Texture" id=5]
[ext_resource path="res://texture/enemy_sprites/Death5 (2).png" type="Texture" id=6]
[ext_resource path="res://texture/enemy_sprites/Death6 (2).png" type="Texture" id=7]
[ext_resource path="res://texture/enemy_sprites/Idle2 (2).png" type="Texture" id=8]
[ext_resource path="res://texture/enemy_sprites/Idle3 (2).png" type="Texture" id=9]
[ext_resource path="res://texture/enemy_sprites/Attack3 (2).png" type="Texture" id=10]
[ext_resource path="res://texture/enemy_sprites/Idle1 (2).png" type="Texture" id=11]
[ext_resource path="res://texture/enemy_sprites/Attack4 (2).png" type="Texture" id=12]
[ext_resource path="res://texture/enemy_sprites/Death1 (2).png" type="Texture" id=13]
[ext_resource path="res://texture/enemy_sprites/Attack5 (2).png" type="Texture" id=14]
[ext_resource path="res://personnage/Enemy.gd" type="Script" id=15]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 5 ), ExtResource( 10 ), ExtResource( 12 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 9.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 12.3125, 11.4375 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 7.75, 19.375 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 13, 13.5625 )

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 15 )

[node name="Attack_enemy" type="AnimatedSprite" parent="."]
position = Vector2( 7.62939e-06, 0 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 7 )

[node name="Death_enemy" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 8 )

[node name="Idle_enemy" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 9 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 9, 2 )
shape = SubResource( 4 )

[node name="attack_enemy" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 32

[node name="attack_shape_enemy" type="CollisionShape2D" parent="attack_enemy"]
modulate = Color( 0, 1, 0, 1 )
light_mask = 0
position = Vector2( -12.25, -5 )
shape = SubResource( 10 )

[node name="death_enemy" type="Area2D" parent="."]
collision_layer = 128
collision_mask = 0

[node name="death_shape_enemy" type="CollisionShape2D" parent="death_enemy"]
position = Vector2( 9, -1 )
shape = SubResource( 11 )

[connection signal="area_entered" from="attack_enemy" to="." method="_attack_enemy_area_entered"]
[connection signal="area_entered" from="death_enemy" to="." method="_death_enemy_area_entered"]
